May/Cilium/demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: cilium-test-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: nginx:alpine
        ports:
        - containerPort: 8080
        command: ["/bin/sh"]
        args:
          - -c
          - |
            [...]
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: cilium-test-app
  labels:
    app: backend
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: backend
